--- a/Code/.gitignore
+++ b/Code/.gitignore
@@ -8,3 +8,9 @@
 /Utilisateur.class
 /TestImprimante.class
 /Projecteur.class
+/Eleve.class
+/Professeur.class
+/Routeur.class
+/TestOrdinateur.class
+/TestProjecteur.class
+/TestRouteur.class
